--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -13,6 +13,8 @@ $color-swiper: #89C249;
 $form-bg: #363A4D;
 $input-placeholeder: #CBCBCB;
 $checkbox-border: #282B38;
+$accordion-button: #3A444E;
+$accordion-body-title: #282B38;
 
 $section-padding: 90px 0 100px;
 $section-padding-mobile: 54px 0 60px;
