--- a/dev/templates/questions.html
+++ b/dev/templates/questions.html
@@ -5,6 +5,75 @@
     </div>
 
     <div class="questions-row">
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Как рассчитывается стоимость доставки?
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <h3>Можно ли через вас оплатить товар поставщику?</h3>
+              <h4>Да, мы предоставляем такую услугу, мы можем взять оплату товара в Китае на себя. Если у вас нет
+                валютного счёта, то
+                можете оплатить товар в гривнах на наш счет.</h4>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Как происходит оплата за доставку груза?
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <h3>Можно ли через вас оплатить товар поставщику?</h3>
+              <h4>Да, мы предоставляем такую услугу, мы можем взять оплату товара в Китае на себя. Если у вас нет
+                валютного счёта, то
+                можете оплатить товар в гривнах на наш счет.</h4>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              В чём особенность КАРГО доставки из Китая
+
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <h3>Можно ли через вас оплатить товар поставщику?</h3>
+              <h4>Да, мы предоставляем такую услугу, мы можем взять оплату товара в Китае на себя. Если у вас нет
+                валютного счёта, то
+                можете оплатить товар в гривнах на наш счет.</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+              Какой срок доставки из Китая?
+            </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <h3>Можно ли через вас оплатить товар поставщику?</h3>
+              <h4>Да, мы предоставляем такую услугу, мы можем взять оплату товара в Китае на себя. Если у вас нет
+                валютного счёта, то
+                можете оплатить товар в гривнах на наш счет.</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <form class="questions-form">
         <div class="form-column">
           <div class="qustions-form-title">
@@ -36,4 +105,10 @@
         </div>
       </form>
     </div>
+
+
+
+
+
+  </div>
 </section>
