--- a/dev/templates/delivery.html
+++ b/dev/templates/delivery.html
@@ -80,8 +80,54 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide">Slide 4</div>
-				<div class="swiper-slide">Slide 5</div>
+				<div class="swiper-slide">
+					<div class="card">
+						<div class="img-box">
+							<img src="assets/Img/img-box-1.png" class="img-fluid" alt="img-box-1">
+						</div>
+						<h4 class="card-title">Ж/д</h4>
+
+						<ul class="card-option">
+							<li class="option-item"><img src="assets/Img/calendar.svg" alt="calendar">9-15 дней</li>
+							<li class="option-item"><img src="assets/Img/box.svg" alt="box">от 5 кг</li>
+						</ul>
+
+						<div class="card-price">
+							<span>от</span>
+							<b>2.5</b>
+							<span>$/кг</span>
+						</div>
+
+						<div class="btn-row">
+							<button class="btn btn-primary">Оставить Заявку</button>
+							<button class="btn btn-secondary">Подробднее</button>
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="card">
+						<div class="img-box">
+							<img src="assets/Img/img-box-2.png" class="img-fluid" alt="img-box-1">
+						</div>
+						<h4 class="card-title">Море</h4>
+
+						<ul class="card-option">
+							<li class="option-item"><img src="assets/Img/calendar.svg" alt="calendar">9-15 дней</li>
+							<li class="option-item"><img src="assets/Img/box.svg" alt="box">от 5 кг</li>
+						</ul>
+
+						<div class="card-price">
+							<span>от</span>
+							<b>2.5</b>
+							<span>$/кг</span>
+						</div>
+
+						<div class="btn-row">
+							<button class="btn btn-primary">Оставить Заявку</button>
+							<button class="btn btn-secondary">Подробднее</button>
+						</div>
+					</div>
+				</div>
 			</div>
 			<!-- If we need pagination -->
 			<div class="swiper-pagination"></div>
