--- a/dev/sass/questions.scss
+++ b/dev/sass/questions.scss
@@ -2,6 +2,12 @@
   font-family: "ProximaNova";
   background: $bg-body;
 
+  .template-title {
+    &::before {
+      background-color: $primary-color;
+    }
+  }
+
   .questions-row {
     display: flex;
     justify-content: center;
@@ -84,7 +90,7 @@
       border-radius: 20px;
       color: #fff !important;
       padding: 39px 40px;
-      box-shadow: 5px 15px 40px #363a4d52;
+      box-shadow: 5px 15px 40px 0 rgba(11, 24, 97, 0.10);
 
       .form-column {
 
