--- a/dev/sass/services.scss
+++ b/dev/sass/services.scss
@@ -1,6 +1,12 @@
 .services {
 	background: $bg-section;
 
+	.template-title {
+		&::before {
+			background-color: $primary-color;
+		}
+	}
+
 	position: relative;
 
 	.swiper-slide {
