--- a/dev/templates/banner.html
+++ b/dev/templates/banner.html
@@ -1,39 +1,50 @@
 <section class="banner">
-<div id="banner-swiper" class="swiper container-xxl">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-    <div class="swiper-slide " style="background-image: url(assets/Img/banner.png)">
-      <div class="container">
-        <div class="banner-title">Прямое КАРГО из Китая</div>
-        <div class="banner-description">Доставляем любые грузы из Китая по честной цене</div>
-        <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img" alt="Vector"></button>
+  <div id="banner-swiper" class="swiper container-xxl">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide " style="background-image: url(assets/Img/banner.png)">
+        <div class="container">
+          <div class="banner-title">Прямое КАРГО из Китая</div>
+          <div class="banner-description">Доставляем любые грузы из Китая по честной цене</div>
+          <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img"
+              alt="Vector"></button>
+        </div>
+      </div>
+      <div class="swiper-slide" style="background-image: url(assets/Img/banner2.png);">
+        <div class="container">
+          <div class="banner-title">Выкуп товара с ТаоБао, 1688</div>
+          <div class="banner-description">Выкуп и доставка товаров с китайских торговых площадок. </div>
+          <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img"
+              alt="Vector"></button>
+        </div>
+      </div>
+      <div class="swiper-slide" style="background-image: url(assets/Img/banner3.png);">
+        <div class="container">
+          <div class="banner-title">Экспресс авто доставка</div>
+          <div class="banner-description"></div>
+          <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img"
+              alt="Vector"></button>
+        </div>
+      </div>
+      <div class="swiper-slide" style="background-image: url(assets/Img/banner-4.png);">
+        <div class="container">
+          <div class="banner-title">Выкуп товара с ТаоБао, 1688</div>
+          <div class="banner-description">Выкуп и доставка товаров с китайских торговых площадок. </div>
+          <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img"
+              alt="Vector"></button>
+        </div>
       </div>
     </div>
-    <div class="swiper-slide" style="background-image: url(assets/Img/banner2.png);">
-       <div class="container">
-        <div class="banner-title">Выкуп товара с ТаоБао, 1688</div>
-        <div class="banner-description">Выкуп и доставка товаров с китайских торговых площадок. </div>
-        <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img" alt="Vector"></button>
-      </div>
-    </div>
-    <div class="swiper-slide" style="background-image: url(assets/Img/banner3.png);">
-       <div class="container">
-        <div class="banner-title">Экспресс авто доставка</div>
-        <div class="banner-description"></div>
-        <button class="btn btn-primary btn-lg">Рассчитать стоимость<img src="assets/Img/Vector.svg" class="btn-img" alt="Vector"></button>
-      </div>
-    </div>
-  </div>
-  <!-- If we need pagination -->
-  <div class="swiper-pagination"></div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
 
-  <!-- If we need navigation buttons -->
+    <!-- If we need navigation buttons -->
 
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
 
 
-  <!-- If we need scrollbar -->
-  <!-- <div class="swiper-scrollbar"></div> -->
+    <!-- If we need scrollbar -->
+    <!-- <div class="swiper-scrollbar"></div> -->
 </section>
