--- a/dev/templates/services.html
+++ b/dev/templates/services.html
@@ -50,8 +50,20 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">Slide 4</div>
-        <div class="swiper-slide">Slide 5</div>
+        <div class="swiper-slide">
+          <div class="card">
+            <div class="img-box">
+              <img src="assets/Img/services-4.png" class="img-fluid" alt="img-box-1">
+            </div>
+            <h4 class="card-title">Перевод денежных средств</h4>
+            <h6 class="card-description">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+              в Украину - сборные грузы
+              и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Украина. </h6>
+            <div class="btn-row">
+              <button class="btn btn-secondary">Подробднее</button>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- If we need pagination -->
       <div class="swiper-pagination"></div>
